[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psd_utilities"
version = "0.0.1"
authors = [
  {name = "Milan Kundra", email = "kundra.milan@uk.sika.com"},
]
dependencies = [
  "numpy>=2.3",
  "scipy>=1.14.0",
]
description = "Package containing utility functions for PSD processing."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [project.urls]
# Homepage = "https://github.com/SikaSIS/hybrid-rag"
# Issues = "https://github.com/SikaSIS/hybrid-rag/issues"
